# par2py

./: README.md  setup.cfg  setup.py
par2/: __init__.py  __main__.py  packets.py  par2.py  reader.py
test/: LICENSE
tests/: conftest.py  helpers.py  test_packet.py  test_reader.py  testfile.txt  testfile.txt.par2  testfile.txt.vol0+1.par2
tests/test_par2/: test_simple_read.py
