[metadata]
name = par2py
version = 0.1.0
description = "par2 Python Utilities"
long_description = file: README.md, LICENSE
license = MIT
keywords = par2
classifiers =
    # Get strings from http://pypi.python.org/pypi?%3Aaction=list_classifiers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
author = Arthur Moore
author_email = arthur.moore.git@cd-net.net
url = http://github.com/EmperorArthur/par2py

[options]
packages = par2
include_package_data = True
zip_safe = True

[options.entry_points]
console_scripts =
    par2ls = par2.__main__:ls
